--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contrato-generator",
+  "homepage": "https://ian-almeida.github.io/contrato-generator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,18 +11,22 @@
     "@testing-library/user-event": "^12.8.3",
     "docxtemplater": "^3.21.1",
     "file-saver": "^2.0.5",
+    "gh-pages": "^3.1.0",
     "pizzip": "^3.0.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^4.5.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-text-mask": "^5.4.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
